[project]
name = "grid-dynamics-mcp"
version = "2.7.0"
description = "Compositional structure and mood analysis with rhythmic presets and attractor visualization prompt generation"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dal Marsters" },
]
keywords = [
    "mcp",
    "aesthetics",
    "composition",
    "image-generation",
    "grid-dynamics",
]

dependencies = [
    "fastmcp>=2.0",
    "numpy>=1.24",
]

[project.scripts]
grid-dynamics-mcp = "grid_dynamics_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["grid_dynamics_mcp.py"]
